--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">UI_Test</string>
+    <string name="app_name">Smart Home</string>
     <string name="action_settings">Settings</string>
 
     <string name="send">Send</string>
